tests/baselines/reference/for-inStatementsDestructuring.errors.txt
for-inStatementsDestructuring.ts(1,10): error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.
for-inStatementsDestructuring.ts(1,10): error TS2802: Type 'string' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.


==== for-inStatementsDestructuring.ts (2 errors) ====
    for (var [a, b] in []) {}
             ~~~~~~
!!! error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.
             ~~~~~~
!!! error TS2802: Type 'string' can only be iterated through when using the '--downlevelIteration' flag or with a '--target' of 'es2015' or higher.